@@ -197,7 +197,7 @@ sub history {
   return 404 if $f->{_err};
 
   # get item object and title
-  my $obj = $type eq 'u' ? $self->dbUserGet(uid => $id)->[0] :
+  my $obj = $type eq 'u' ? $self->dbUserGet(uid => $id, what => 'hide_list')->[0] :
             $type eq 'p' ? $self->dbProducerGet(id => $id)->[0] :
             $type eq 'r' ? $self->dbReleaseGet(id => $id)->[0] :
             $type eq 'v' ? $self->dbVNGet(id => $id)->[0] : undef;
