@@ -16,7 +16,8 @@
 	- Improved VN tag filter selection with a dynamic HTML list of selected tags
 	- Don't send 'tagspoil' filter when 'tag_inc' isn't active
 	- Don't allow page > 100 or sorting on username or title on tag link browser
-	- Added users_prefs table and removed users.(skin|customcss|show_nsfw)
+	- Added users_prefs table and removed the following columns from users:
+	  skin, customcss, show_nsfw, show_list
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
